force-app/main/default/src/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Comment__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>