force-app/main/default/src/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>UPLOADED_BY_SENDER</fullName>
            </value>
            <value>
                <fullName>FAXED_BY_SENDER</fullName>
            </value>
            <value>
                <fullName>AGREEMENT_MODIFIED</fullName>
            </value>
            <value>
                <fullName>USER_ACK_AGREEMENT_MODIFIED</fullName>
            </value>
            <value>
                <fullName>PRESIGNED</fullName>
            </value>
            <value>
                <fullName>SIGNED</fullName>
            </value>
            <value>
                <fullName>WRITTEN_SIGNED</fullName>
            </value>
            <value>
                <fullName>ESIGNED</fullName>
            </value>
            <value>
                <fullName>DIGSIGNED</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>FORM_FILLED</fullName>
            </value>
            <value>
                <fullName>OFFLINE_SYNC</fullName>
            </value>
            <value>
                <fullName>FAXIN_RECEIVED</fullName>
            </value>
            <value>
                <fullName>SIGNATURE_REQUESTED</fullName>
            </value>
            <value>
                <fullName>APPROVAL_REQUESTED</fullName>
            </value>
            <value>
                <fullName>ACCEPTANCE_REQUESTED</fullName>
            </value>
            <value>
                <fullName>ACKNOWLEDGEMENT_REQUESTED</fullName>
            </value>
            <value>
                <fullName>FORM_FILLING_REQUESTED</fullName>
            </value>
            <value>
                <fullName>RECALLED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>EXPIRED_AUTOMATICALLY</fullName>
            </value>
            <value>
                <fullName>SHARED</fullName>
            </value>
            <value>
                <fullName>EMAIL_VIEWED</fullName>
            </value>
            <value>
                <fullName>AUTO_CANCELLED_CONVERSION_PROBLEM</fullName>
            </value>
            <value>
                <fullName>SIGNER_SUGGESTED_CHANGES</fullName>
            </value>
            <value>
                <fullName>SENDER_CREATED_NEW_REVISION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>