force-app/main/default/src/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Key__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>